# data-hub

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json
.husky/: pre-commit
charts/udh-platform/: Chart.yaml  values-local.yaml  values.schema.json  values.yaml
doc/: example-rook-operator.yaml  geojson-export.md  local-ca.crt  resources_authorization.md  token_howto.py
doc/new-users/: Nutzer-und-Gruppen.md
doc/prometheus-remote-writer/: prometheus-remote-writer.md
doc/sensor-onboarding/: Sensor-Onboarding.md
e2e/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  playwright.config.ts  run.sh  tsconfig.json
e2e/test/: auto-create.test.ts  delete-tenants.test.ts  keycloak-auth.test.ts  public-dashboard-sync.test.ts
fake-sensors/: .gitignore  README.md  create-sensor.graphql  fakesensor.clj  fakesensors.py  waste-baskets.py
geojson-export/: .gitignore  Cargo.toml  Dockerfile
geojson-export/src/: main.rs
grafana-public-sync/: .trivyignore  Dockerfile  docker-entrypoint.sh  requirements.txt  sync.py
keycloak-extensions/: .dockerignore  .gitignore  Dockerfile  Dockerfile.local  build.sh  integration-env-local.sh  integration-env.sh  quick-build.sh
keycloak-extensions/theme/: pom.xml
keycloak-extensions/udh-sync/: bb.edn  build.gradle.kts  cli.sh  pom.xml  shell-tools.sh  (+1 more)
sensor-ingestion/: .conform.yaml  .gitignore  .gitlab-ci.yml  .prettierignore  README.md  package-lock.json  package.json  release.sh
test-env/: .common  build-image  helm-upgrade  minikube-startup  set-etc-hosts  sql-shell  start.sh  versions.sh
(+249 files in other folders)
