[package]
name = "geojson-export"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
bytes = "1.6.0"
chrono = "0.4.38"
geohash = "0.13.1"
geojson = "0.24.1"
mime = "0.3.17"
prometheus-http-query = { version = "0.8.3", default-features = false }
promql-parser = "0.3.1"
reqwest = { version = "0.12.4", default-features = false }
rustls = { version = "0.23.5", default-features = false, features = ["ring"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.12.0"
tower-http = { version = "0.5.2", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
